# ChuangTzuBot

./: .gitignore  README.md  example.env  pyproject.toml
examples/: example.py
src/chuang_tzu_bot/: __init__.py  __main__.py  message.py  parse_user_args.py  pretty_message_html.py  routes.py  tasks.py  types.py  worker.py
src/newspaper_boy/: prompts_example.yaml  serper_tasks_example.yaml
